--- a/index.html
+++ b/index.html
@@ -434,15 +434,15 @@
               <div class="col-lg-4  col-md-12">
                 <div class="product-card">
                   <div class="product-card-top">
-                    <img src="./img/products/documentation.png" alt="e-doc">
+                    <img src="./img/products/hr.svg" alt="e-doc">
                   </div>
                   <span class="product-card-badge  product-card-badge-incoming">
                     Incoming
                   </span>
                   <div class="product-card-content">
 
-                    <h1>Document <br> Managment</h1>
-                    <p>Tofiq and Bilal are the gayest people ever seen in the history of the universe. </p>
+                    <h1>Ablarva-HR</h1>
+                    <p>Simplify your HR tasks from hiring to payroll with our all-in-one dashboard. Ideal for startups looking to scale efficiently.</p>
                     <a href="#">Learn more</a>
                   </div>
                 </div>
@@ -450,15 +450,15 @@
               <div class="col-lg-4   col-md-12">
                 <div class="product-card">
                   <div class="product-card-top">
-                    <img src="./img/products/documentation.png" alt="e-doc">
+                    <img src="./img/products/doc.svg" alt="e-doc">
                   </div>
-                  <span class="product-card-badge">
-                    Available
+                  <span class="product-card-badge ">
+                    Demo
                   </span>
                   <div class="product-card-content">
 
-                    <h1>HR</h1>
-                    <p>Tofiq and Bilal are the gayest people ever seen in the history of the universe. </p>
+                    <h1>Ablarva-Doc</h1>
+                    <p>Streamline your document workflow. Share, sign, and store all your essential documents in one secure place. </p>
                     <a href="#">Learn more</a>
                   </div>
                 </div>
@@ -466,15 +466,15 @@
               <div class="col-lg-4   col-md-12">
                <div class="product-card">
                   <div class="product-card-top">
-                    <img src="./img/products/documentation.png" alt="e-doc">
+                    <img src="./img/products/talant.svg" alt="e-doc">
                   </div>
-                  <span class="product-card-badge">
-                    Available
+                  <span class="product-card-badge product-card-badge-incoming">
+                    Incoming
                   </span>
                   <div class="product-card-content">
 
-                    <h1>File <br> Storage</h1>
-                    <p>Tofiq and Bilal are the gayest people ever seen in the history of the universe. </p>
+                    <h1>Ablarva-Talent</h1>
+                    <p>Unearth hidden gems in your applicant pool. Gamify your hiring process and build a stronger team.</p>
                     <a href="#">Learn more</a>
                   </div>
                 </div>
@@ -488,15 +488,15 @@
               <div class="col-lg-4   col-md-12">
                <div class="product-card">
                   <div class="product-card-top">
-                    <img src="./img/products/documentation.png" alt="e-doc">
+                    <img src="./img/products/file.svg" alt="e-doc">
                   </div>
-                  <span class="product-card-badge">
-                    Available
+                  <span class="product-card-badge product-card-badge-incoming">
+                    Incoming
                   </span>
                   <div class="product-card-content">
 
-                    <h1>Accounting</h1>
-                    <p>Tofiq and Bilal are the gayest people ever seen in the history of the universe. </p>
+                    <h1>Ablarva-File</h1>
+                    <p>Store, access, and manage all your crucial files securely in one place. Seamless integration with other Ablarva modules for maximum efficiency. </p>
                     <a href="#">Learn more</a>
                   </div>
                 </div>
@@ -504,15 +504,15 @@
               <div class="col-lg-4   col-md-12">
                <div class="product-card">
                   <div class="product-card-top">
-                    <img src="./img/products/documentation.png" alt="e-doc">
+                    <img src="./img/products/message.svg" alt="e-doc">
                   </div>
-                  <span class="product-card-badge">
-                    Available
+                  <span class="product-card-badge product-card-badge-incoming">
+                    Incoming
                   </span>
                   <div class="product-card-content">
 
-                    <h1>Messaging</h1>
-                    <p>Tofiq and Bilal are the gayest people ever seen in the history of the universe. </p>
+                    <h1>Ablarva-Message</h1>
+                    <p>Streamline team communication with secure, integrated messaging. Say goodbye to email clutter and hello to efficient collaboration. </p>
                     <a href="#">Learn more</a>
                   </div>
                 </div>
