--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <!-- Allow search engines to index your site -->
   <meta name="robots" content="index, follow">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="img/local/logoMain.png" type="image/x-icon" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no" />
   <link id="googleFonts"
@@ -181,9 +181,9 @@
                         <li>
                           <a href="#about" class="nav-link active" title="About Us" aria-label="About Us">About</a>
                         </li>
-                        <li>
+                        <!-- <li>
                           <a href="#team" class="nav-link active" title="Our Team" aria-label="Our Team">Team</a>
-                        </li>
+                        </li> -->
                         <li>
                           <a href="#works" class="nav-link active" title="Our Works" aria-label="Our Works">Works</a>
                         </li>
@@ -349,7 +349,7 @@
 
 
       <!-- Team -->
-      <section id="team" class="section section-default  bg-transparent border-0" role="region"
+      <!-- <section id="team" class="section section-default  bg-transparent border-0" role="region"
         aria-labelledby="teamHeading">
         <div class="container">
           <div class="row align-items-center text-center">
@@ -364,12 +364,9 @@
 
             <div class="mt-4 pt-2">
               <div class="row justify-content-center team-list sort-destination" data-sort-id="team">
-                <!-- Each Team Member -->
                 <div class="col-12 col-sm-6 col-lg-3 isotope-item leadership">
                   <span class="thumb-info thumb-info-hide-wrapper-bg mb-4">
                     <span class="thumb-info-wrapper">
-                      <!-- Accessible link -->
-                      <!-- SEO-friendly image -->
                       <img src="img/Team/Tofig.webp" class="img-fluid" alt="Tofig Aliyev, CEO & Founder of Ablarva" />
                       <span class="thumb-info-title">
                         <span class="thumb-info-inner">Tofig Aliyev</span>
@@ -378,9 +375,6 @@
                     </span>
                   </span>
                 </div>
-                <!-- Remaining Team Members -->
-                <!-- Remaining Team Members -->
-                <!-- COO & Founder -->
                 <div class="col-12 col-sm-6 col-lg-3 isotope-item marketing">
                   <span class="thumb-info thumb-info-hide-wrapper-bg mb-4">
                     <span class="thumb-info-wrapper">
@@ -392,7 +386,6 @@
                     </span>
                   </span>
                 </div>
-                <!-- CTO & Founder -->
                 <div class="col-12 col-sm-6 col-lg-3 isotope-item development">
                   <span class="thumb-info thumb-info-hide-wrapper-bg mb-4">
                     <span class="thumb-info-wrapper">
@@ -409,7 +402,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
 
       <!-- Works -->
@@ -426,7 +419,7 @@
               <strong class="font-weight-extra-bold color-white">Your Success Drives Ablarva</strong>
             </h1>
             <h5 class="color-light-gray">
-              Ablarva's portfolio of HR solutions for startups is designed to propel your venture toward unprecedented
+              Ablarva's portfolio of solutions for startups is designed to propel your venture toward unprecedented
               success and operational efficiency.
             </h5>
 
@@ -442,7 +435,8 @@
                   <div class="product-card-content">
 
                     <h1>Ablarva-HR</h1>
-                    <p>Simplify your HR tasks from hiring to payroll with our all-in-one dashboard. Ideal for startups looking to scale efficiently.</p>
+                    <p>Simplify your HR tasks from hiring to payroll with our all-in-one dashboard. Ideal for startups
+                      looking to scale efficiently.</p>
                     <a href="#">Learn more</a>
                   </div>
                 </div>
@@ -458,13 +452,14 @@
                   <div class="product-card-content">
 
                     <h1>Ablarva-Doc</h1>
-                    <p>Streamline your document workflow. Share, sign, and store all your essential documents in one secure place. </p>
+                    <p>Streamline your document workflow. Share, sign, and store all your essential documents in one
+                      secure place. </p>
                     <a href="#">Learn more</a>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4   col-md-12">
-               <div class="product-card">
+                <div class="product-card">
                   <div class="product-card-top">
                     <img src="./img/products/talant.svg" alt="e-doc">
                   </div>
@@ -474,11 +469,12 @@
                   <div class="product-card-content">
 
                     <h1>Ablarva-Talent</h1>
-                    <p>Unearth hidden gems in your applicant pool. Gamify your hiring process and build a stronger team.</p>
+                    <p>Unearth hidden gems in your applicant pool. Gamify your hiring process and build a stronger team.
+                    </p>
                     <a href="#">Learn more</a>
                   </div>
                 </div>
-               
+
               </div>
             </div>
             <br>
@@ -486,7 +482,7 @@
             <br>
             <div class="row gy-5 justify-content-center">
               <div class="col-lg-4   col-md-12">
-               <div class="product-card">
+                <div class="product-card">
                   <div class="product-card-top">
                     <img src="./img/products/file.svg" alt="e-doc">
                   </div>
@@ -496,13 +492,14 @@
                   <div class="product-card-content">
 
                     <h1>Ablarva-File</h1>
-                    <p>Store, access, and manage all your crucial files securely in one place. Seamless integration with other Ablarva modules for maximum efficiency. </p>
+                    <p>Store, access, and manage all your crucial files securely in one place. Seamless integration with
+                      other Ablarva modules for maximum efficiency. </p>
                     <a href="#">Learn more</a>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4   col-md-12">
-               <div class="product-card">
+                <div class="product-card">
                   <div class="product-card-top">
                     <img src="./img/products/message.svg" alt="e-doc">
                   </div>
@@ -512,7 +509,8 @@
                   <div class="product-card-content">
 
                     <h1>Ablarva-Message</h1>
-                    <p>Streamline team communication with secure, integrated messaging. Say goodbye to email clutter and hello to efficient collaboration. </p>
+                    <p>Streamline team communication with secure, integrated messaging. Say goodbye to email clutter and
+                      hello to efficient collaboration. </p>
                     <a href="#">Learn more</a>
                   </div>
                 </div>
@@ -568,39 +566,189 @@
       <meta name="description" content="Exclusive Beta Access for the Visionaries">
       <meta name="keywords" content="Beta Access, Visionaries, Early Access">
 
-      <div class="row counters with-borders">
-        <!-- Counter for days -->
+      <section class="custom-coming-soon-section">
+
+
+
+        <div id="custom-coming-soon-section-wrap">
+          <svg class="waves" xmlns="http://www.w3.org/2000/svg" width="1440" height="321.75" viewBox="0 0 960 214.5"
+            preserveAspectRatio="xMinYMid meet">
+            <defs>
+              <style>
+                .waves>path {
+                  -webkit-animation: a 17390ms ease-in-out infinite alternate-reverse both;
+                  -moz-animation: a 17390ms ease-in-out infinite alternate-reverse both;
+                  -ms-animation: a 17390ms ease-in-out infinite alternate-reverse both;
+                  -o-animation: a 17390ms ease-in-out infinite alternate-reverse both;
+                  animation: a 17390ms ease-in-out infinite alternate-reverse both;
+                  -webkit-animation-timing-function: cubic-bezier(.25, 0, .75, 1);
+                  -moz-animation-timing-function: cubic-bezier(.25, 0, .75, 1);
+                  -ms-animation-timing-function: cubic-bezier(.25, 0, .75, 1);
+                  -o-animation-timing-function: cubic-bezier(.25, 0, .75, 1);
+                  animation-timing-function: cubic-bezier(.25, 0, .75, 1);
+                  -webkit-will-change: transform;
+                  -moz-will-change: transform;
+                  -ms-will-change: transform;
+                  -o-will-change: transform;
+                  will-change: transform
+                }
+
+                .waves>path:nth-of-type(1) {
+                  -webkit-animation-duration: 20580ms;
+                  -moz-animation-duration: 20580ms;
+                  -ms-animation-duration: 20580ms;
+                  -o-animation-duration: 20580ms;
+                  animation-duration: 20580ms
+                }
+
+                .waves>path:nth-of-type(2) {
+                  -webkit-animation-delay: -2690ms;
+                  -moz-animation-delay: -2690ms;
+                  -ms-animation-delay: -2690ms;
+                  -o-animation-delay: -2690ms;
+                  animation-delay: -2690ms;
+                  -webkit-animation-duration: 13580ms;
+                  -moz-animation-duration: 13580ms;
+                  -ms-animation-duration: 13580ms;
+                  -o-animation-duration: 13580ms;
+                  animation-duration: 13580ms
+                }
+
+                g>path:nth-of-type(1) {
+                  -webkit-animation-delay: -820ms;
+                  -moz-animation-delay: -820ms;
+                  -ms-animation-delay: -820ms;
+                  -o-animation-delay: -820ms;
+                  animation-delay: -820ms;
+                  -webkit-animation-duration: 10730ms;
+                  -moz-animation-duration: 10730ms;
+                  -ms-animation-duration: 10730ms;
+                  -o-animation-duration: 10730ms;
+                  animation-duration: 10730ms
+                }
+
+                .waves>path:nth-of-type(1),
+                g>path:nth-of-type(2) {
+                  -webkit-animation-direction: alternate;
+                  -moz-animation-direction: alternate;
+                  -ms-animation-direction: alternate;
+                  -o-animation-direction: alternate;
+                  animation-direction: alternate
+                }
+
+                @-webkit-keyframes a {
+                  0% {
+                    -webkit-transform: translateX(-750px);
+                    transform: translateX(-750px)
+                  }
+
+                  100% {
+                    -webkit-transform: translateX(-20px);
+                    transform: translateX(-20px)
+                  }
+                }
+
+                @-moz-keyframes a {
+                  0% {
+                    -moz-transform: translateX(-750px);
+                    transform: translateX(-750px)
+                  }
+
+                  100% {
+                    -moz-transform: translateX(-20px);
+                    transform: translateX(-20px)
+                  }
+                }
+
+                @-ms-keyframes a {
+                  0% {
+                    -ms-transform: translateX(-750px);
+                    transform: translateX(-750px)
+                  }
+
+                  100% {
+                    -ms-transform: translateX(-20px);
+                    transform: translateX(-20px)
+                  }
+                }
+
+                @-o-keyframes a {
+                  0% {
+                    -o-transform: translateX(-750px);
+                    transform: translateX(-750px)
+                  }
+
+                  100% {
+                    -o-transform: translateX(-20px);
+                    transform: translateX(-20px)
+                  }
+                }
+
+                @keyframes a {
+                  0% {
+                    -webkit-transform: translateX(-750px);
+                    -moz-transform: translateX(-750px);
+                    -ms-transform: translateX(-750px);
+                    -o-transform: translateX(-750px);
+                    transform: translateX(-750px)
+                  }
+
+                  100% {
+                    -webkit-transform: translateX(-20px);
+                    -moz-transform: translateX(-20px);
+                    -ms-transform: translateX(-20px);
+                    -o-transform: translateX(-20px);
+                    transform: translateX(-20px)
+                  }
+                }
+              </style>
+              <linearGradient id="a">
+                <stop stop-color="#156eb7" />
+                <stop offset="0.2" stop-color="#333391" />
+                <stop offset="0.4" stop-color="#E91388" />
+                <stop offset="0.6" stop-color="#EB2D2E" />
+              </linearGradient>
+            </defs>
+            <path fill="url(#a)"
+              d="M2662.6 1S2532 41.2 2435 40.2c-19.6-.2-37.3-1.3-53.5-2.8 0 0-421.3-59.4-541-28.6-119.8 30.6-206.2 75.7-391 73.3-198.8-2-225.3-15-370.2-50-145-35-218 37-373.3 36-19.6 0-37.5-1-53.7-3 0 0-282.7-36-373.4-38C139 26 75 46-1 46v106c17-1.4 20-2.3 37.6-1.2 130.6 8.4 210 56.3 287 62.4 77 6 262-25 329.3-23.6 67 1.4 107 22.6 193 23.4 155 1.5 249-71 380-62.5 130 8.5 209 56.3 287 62.5 77 6 126-18 188-18 61.4 0 247-38 307.4-46 159.3-20 281.2 29 348.4 30 67 2 132.2 6 217.4 7 39.3 0 87-11 87-11V1z" />
+            <path fill="#173f6c"
+              d="M2663.6 73.2S2577 92 2529 89c-130.7-8.5-209.5-56.3-286.7-62.4s-125.7 18-188.3 18c-5 0-10-.4-14.5-.7-52-5-149.2-43-220.7-39-31.7 2-64 14-96.4 30-160.4 80-230.2-5.6-340.4-18-110-12-146.6 20-274 36S820.4 0 605.8 0C450.8 0 356 71 225.2 62.2 128 56 60.7 28-.3 11.2V104c22 7.3 46 14.2 70.4 16.7 110 12.3 147-19.3 275-35.5s350 39.8 369 43c27 4.3 59 8 94 10 13 .5 26 1 39 1 156 2 250-70.3 381-62 130.5 8.2 209.5 56.3 286.7 62 77 6.4 125.8-18 188.3-17.5 5 0 10 .2 14.3.6 52 5 145 49.5 220.7 38.2 32-5 64-15 96.6-31 160.5-79.4 230.3 6 340 18.4 110 12 146.3-20 273.7-36l15.5-2V73l1-.5z" />
+
+          </svg>
+         <h1>Coming Soon!</h1>
+
+
+      </section>
+
+      <!-- <div class="row counters with-borders">
         <div class="col-sm-6 col-lg-3 mb-4 mb-lg-0">
           <div class="counter color-main" aria-label="Days Counter">
             <strong id="days"></strong>
             <label>Days</label>
           </div>
         </div>
-        <!-- Counter for hours -->
         <div class="col-sm-6 col-lg-3 mb-4 mb-lg-0">
           <div class="counter color-main" aria-label="Hours Counter">
             <strong id="hours"></strong>
             <label>Hours</label>
           </div>
         </div>
-        <!-- Counter for minutes -->
         <div class="col-sm-6 col-lg-3 mb-4 mb-sm-0">
           <div class="counter color-main" aria-label="Minutes Counter">
             <strong id="minutes"></strong>
             <label>Minutes</label>
           </div>
         </div>
-        <!-- Counter for seconds -->
         <div class="col-sm-6 col-lg-3">
           <div class="counter color-main" aria-label="Seconds Counter">
             <strong id="seconds"></strong>
             <label>Seconds</label>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <a class="popup-with-form btn btn-xl mt-4 custom-gradient-button" href="#demo-form"
-        aria-label="Apply for Early Access">APPLY</a>
+      <!-- <a class="popup-with-form btn btn-xl mt-4 custom-gradient-button" href="#demo-form"
+        aria-label="Apply for Early Access">APPLY</a> -->
 
       <!-- Early Access Registration Form -->
       <form id="demo-form" class="white-popup-block mfp-hide" aria-label="Early Access Registration Form">
