--- a/index.html
+++ b/index.html
@@ -704,9 +704,9 @@
               </style>
               <linearGradient id="a">
                 <stop stop-color="#156eb7" />
-                <stop offset="0.2" stop-color="#333391" />
-                <stop offset="0.4" stop-color="#E91388" />
-                <stop offset="0.6" stop-color="#EB2D2E" />
+                <stop offset="0.2" stop-color="#156eb7" />
+                <stop offset="0.4" stop-color="#156eb7" />
+                <stop offset="0.6" stop-color="#156eb7" />
               </linearGradient>
             </defs>
             <path fill="url(#a)"
