--- a/Blogs/AllBlogs.html
+++ b/Blogs/AllBlogs.html
@@ -72,12 +72,97 @@
     <script src="./../../vendor/modernizr/modernizr.min.js"></script>
   </head>
   <body data-plugin-page-transition>
-    <div class="body">
-      <div role="main" class="main">
-        <section
-          class="page-header page-header-modern bg-color-light-scale-1 page-header-md"
+    <div class="body ">
+      
+      <div role="main" class="main ">
+
+      <header id="header" class="blogs-page-header" role="banner" aria-label="Main Header"
+      class="header-transparent header-transparent-light-bottom-border header-transparent-light-bottom-border-1 header-effect-shrink"
+      data-plugin-options="{'stickyEnabled': true, 'stickyEffect': 'shrink', 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': true, 'stickyChangeLogo': false, 'stickyStartAt': 30, 'stickyHeaderContainerHeight': 100}">
+      <div class="header-body border-top-0 header-body-bottom-border">
+        <div class="header-container container">
+          <div class="header-row">
+            <div class="header-column">
+              <div class="header-row">
+                <div class="header-logo">
+                  <a href="/index.html">
+                    <img src="../img/local/logoMain.png" class="img-fluid" width="70" height="70" alt="Ablarva Logo" />
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="header-column justify-content-end">
+              <div class="header-row">
+                <div class="header-nav header-nav-links">
+                  <div
+                    class="header-nav-main header-nav-main-text-capitalize header-nav-main-square header-nav-main-dropdown-no-borders header-nav-main-effect-2 header-nav-main-sub-effect-1"
+                    role="navigation" aria-label="Primary navigation">
+                    <nav class="collapse">
+                      <ul class="nav nav-pills" id="mainNav">
+                        <li>
+                          <a href="/index.html#overview" class="nav-link " title="Home" aria-label="Home">Home</a>
+                        </li>
+                        <li>
+                          <a href="/index.html#about" class="nav-link " title="About Us" aria-label="About Us">About</a>
+                        </li>
+                        <!-- <li>
+                          <a href="/index.html#team" class="nav-link active" title="Our Team" aria-label="Our Team">Team</a>
+                        </li> -->
+                        <li>
+                          <a href="/index.html#works" class="nav-link " title="Our Works" aria-label="Our Works">Works</a>
+                        </li>
+                        <li>
+                          <a href="/index.html#access" class="nav-link " title="Get Early Access"
+                            aria-label="Get Early Access">Early Access</a>
+                        </li>
+                        <li>
+                          <a href="/index.html#blog" class="nav-link active" title="Blog" aria-label="Blog">Blog</a>
+                        </li>
+                        <li>
+                          <a href="/index.html#contact" class="nav-link " title="Contact Us"
+                            aria-label="Contact Us">Contact</a>
+                        </li>
+                      </ul>
+                    </nav>
+                  </div>
+                </div>
+                <ul
+                  class="header-social-icons social-icons social-icons-clean social-icons-medium ms-0 ms-xl-3 d-none d-md-inline-flex">
+                  <li class="social-icons-facebook">
+                    <a href="http://www.facebook.com/" target="_blank" title="Follow us on Facebook"
+                      aria-label="Facebook">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li class="social-icons-twitter">
+                    <a href="http://www.twitter.com/" target="_blank" title="Follow us on Twitter" aria-label="Twitter">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                  <li class="social-icons-linkedin">
+                    <a href="http://www.linkedin.com/" target="_blank" title="Follow us on LinkedIn"
+                      aria-label="LinkedIn">
+                      <i class="fab fa-linkedin-in"></i>
+                    </a>
+                  </li>
+                </ul>
+                <button class="btn header-btn-collapse-nav bg-main" data-bs-toggle="collapse"
+                  data-bs-target=".header-nav-main nav" aria-label="Toggle navigation">
+                  <i class="fas fa-bars"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+
+
+        <!-- <section
+          class="page-header pt-5 page-header-modern bg-color-light-scale-1 page-header-md"
         >
-          <div class="container">
+          <div class="container  pt-5 ">
             <div class="row">
               <div
                 class="col-md-12 align-self-center p-static order-2 text-center"
@@ -95,7 +180,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <div class="container py-4">
           <div class="row">
@@ -549,6 +634,23 @@
         </div>
       </div>
     </div>
+
+
+
+
+
+  <footer id="footer" class="clean-t">
+    <div class="footer-copyright">
+      <div class="container py-2">
+        <div class="row py-4">
+          <div class="col d-flex align-items-center justify-content-center">
+            <p><strong>Ablarva Web App</strong> - © Copyright <strong id="year"></strong> All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 
     <!-- Vendor -->
     <script src="./../../vendor/plugins/js/plugins.min.js"></script>
