--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="header-column">
               <div class="header-row">
                 <div class="header-logo">
-                  <a href="demo-app-landing.html">
+                  <a href="index.html">
                     <img src="img/local/logoMain.png" class="img-fluid" width="70" height="70" alt="Ablarva Logo" />
                   </a>
                 </div>
