--- a/Blogs/AllBlogs.html
+++ b/Blogs/AllBlogs.html
@@ -14,7 +14,9 @@
     <meta name="author" content="Ablarva Team" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/img/local/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://ablarva.com/img/local/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="https://ablarva.com/img/local/favicon.ico" sizes="48x48" />
+
     <link rel="apple-touch-icon" href="img/local/apple-touch-icon.png" />
 
     <!-- Mobile Metas -->
