--- a/Blogs/SingleBlogs/revolutionizing-talent-search-and-job-seeking.html
+++ b/Blogs/SingleBlogs/revolutionizing-talent-search-and-job-seeking.html
@@ -21,7 +21,8 @@
   <meta property="og:url" content="https://ablarva.com/Blogs/SingleBlogs/revolutionizing-talent-search-and-job-seeking.html" />
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="/img/local/favicon.ico" type="image/x-icon">
+ <link rel="shortcut icon" href="https://ablarva.com/img/local/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="https://ablarva.com/img/local/favicon.ico" sizes="48x48" />
   <link rel="apple-touch-icon" href="/img/local/apple-touch-icon.png" />
 
   <!-- Mobile Metas -->
